--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,6 @@
+// Custom components
 @import 'partials/components';
+
+// Vendor components
 @import 'vendor/font-awesome/fontawesome';
 @import 'vendor/font-awesome/brands';
