--- a/css/modules/_colours.scss
+++ b/css/modules/_colours.scss
@@ -1,2 +1,3 @@
-$background-colour: #D0F2FF;
-$blue-text-colour: #0D87B5;
+$background-colour: #77a6f7;
+$soft-white: #FAFCF8;
+$pastel-red: #D3E3FC;
