--- a/css/partials/_landing.scss
+++ b/css/partials/_landing.scss
@@ -1,4 +1,4 @@
-@import '../modules/config';
+@import 'social-btn';
 
 #landing {
     background-color: $background-colour;
@@ -6,9 +6,18 @@
     display: flex;
     justify-content: center;
     align-content: center;
+
+    h1, h2 {
+        text-shadow: 1.5px 2.5px rgba(0,0,0,0.3);
+    }
+
     #title-box {
         text-align: center;
         margin: auto;
-        color: $blue-text-colour;
+        color: $soft-white;
+    }
+
+    ul {
+        margin-top: 0.75em;
     }
 }
