--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,19 @@
 @charset "UTF-8";
-* {
-  font-family: "Open Sans", "Roboto", serif;
-  margin: 0;
-  padding: 0;
+.social-btn {
+  display: inline;
+  margin: 0.5rem;
+}
+.social-btn a {
+  color: #FAFCF8;
+  font-size: 3rem;
+  -webkit-transition: color 0.3s;
+  -moz-transition: color 0.3s;
+  -ms-transition: color 0.3s;
+  -o-transition: color 0.3s;
+  transition: color 0.3s;
+}
+.social-btn a:hover, .social-btn a:active, .social-btn a:focus {
+  color: #050307;
 }
 
 .fancy-line {
@@ -24,40 +35,106 @@
   background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 75%);
 }
 
-.social-btn {
-  display: inline;
-  margin: 0.5em;
+/**
+ * Set up a decent box model on the root element
+ */
+html {
+  box-sizing: border-box;
 }
-.social-btn a {
-  color: #FAFCF8;
-  font-size: 2.5em;
-  -webkit-transition: color 0.3s;
-  -moz-transition: color 0.3s;
-  -ms-transition: color 0.3s;
-  -o-transition: color 0.3s;
-  transition: color 0.3s;
+
+/**
+ * Make all elements from the DOM inherit from the parent box-sizing
+ * Since `*` has a specificity of 0, it does not override the `html` value
+ * making all elements inheriting from the root box-sizing value
+ * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+ */
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
 }
-.social-btn a:hover, .social-btn a:focus {
-  color: #050307;
+
+/**
+ * Basic typography style for copy text
+ */
+body {
+  color: #222222;
+  font: normal 125%/1.4 "Open Sans", "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+}
+
+/**
+ * Clear inner floats
+ */
+.clearfix::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+/**
+ * Main content containers
+ * 1. Make the container full-width with a maximum width
+ * 2. Center it in the viewport
+ * 3. Leave some space on the edges, especially valuable on small screens
+ */
+.container {
+  max-width: 1180px;
+  /* 1 */
+  margin-left: auto;
+  /* 2 */
+  margin-right: auto;
+  /* 2 */
+  padding-left: 20px;
+  /* 3 */
+  padding-right: 20px;
+  /* 3 */
+  width: 100%;
+  /* 1 */
+}
+
+/**
+ * Hide text while making it readable for screen readers
+ * 1. Needed in WebKit-based browsers because of an implementation bug;
+ *    See: https://code.google.com/p/chromium/issues/detail?id=457146
+ */
+.hide-text {
+  overflow: hidden;
+  padding: 0;
+  /* 1 */
+  text-indent: 101%;
+  white-space: nowrap;
+}
+
+/**
+ * Hide element while making it readable for screen readers
+ * Shamelessly borrowed from HTML5Boilerplate:
+ * https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css#L119-L133
+ */
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
 
 #landing {
-  background-color: #77a6f7;
+  background-color: #77A6F7;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-content: center;
-}
-#landing h1, #landing h2 {
   text-shadow: 1.5px 2.5px rgba(0, 0, 0, 0.3);
 }
 #landing #title-box {
   text-align: center;
   margin: auto;
   color: #FAFCF8;
-}
-#landing ul {
-  margin-top: 0.75em;
 }
 
 /*!
