Fixed neat parsing error

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,8 +27,7 @@
 
 // 5. Vendors
 @import
-  // 'vendor/bourbon/bourbon',
-  // 'vendor/neat/neat',
-  // 'vendor/normalize',
+  'vendor/bourbon/bourbon',
+  'vendor/neat/neat',
   'vendor/font-awesome/fontawesome',
   'vendor/font-awesome/brands';
