--- a/css/layout/_landing.scss
+++ b/css/layout/_landing.scss
@@ -3,12 +3,29 @@
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-content: center;
-    text-shadow: 1.5px 2.5px rgba(0,0,0,0.3);
+    align-items: center;
+
+    .row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-shadow: 1.5px 2.5px rgba(0,0,0,0.3);
+    }
 
     #title-box {
-        text-align: center;
+        @include grid-column(8);
         margin: auto;
+        text-align: center;
         color: $soft-white;
+    }
+
+    #profile-img {
+        @include grid-column(4);
+        img {
+            margin-left: -60px;
+            @include rounded-img;
+            width: 90%;
+            height: auto;
+        }
     }
 }
