--- a/css/abstracts/_variables.scss
+++ b/css/abstracts/_variables.scss
@@ -1,11 +1,3 @@
-// -----------------------------------------------------------------------------
-// This file contains all application-wide Sass variables.
-// -----------------------------------------------------------------------------
-
-
-
-
-
 /// Regular font family
 /// @type List
 $text-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
@@ -14,10 +6,12 @@ $text-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvet
 /// @type List
 $code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Monaco', monospace !default;
 
-
-
 $background-colour: #77A6F7;
 $soft-white: #FAFCF8;
+
+// Education section
+$education-secondary-colour: #FDAB00;
+$education-dark-background: #222;
 
 
 /// Copy text color
@@ -42,13 +36,9 @@ $dark-grey: rgb(68, 68, 68) !default;
 
 
 
-
-
 /// Container's maximum width
 /// @type Length
 $max-width: 1180px !default;
-
-
 
 
 
@@ -60,8 +50,6 @@ $breakpoints: (
   'medium': 768px,
   'large': 1024px,
 ) !default;
-
-
 
 
 
