--- a/css/abstracts/_variables.scss
+++ b/css/abstracts/_variables.scss
@@ -6,7 +6,7 @@ $text-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvet
 /// @type List
 $code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Monaco', monospace !default;
 
-$background-colour: #77A6F7;
+$background-colour: #101214;
 $soft-white: #FAFCF8;
 
 // Education section
