--- a/css/abstracts/_variables.scss
+++ b/css/abstracts/_variables.scss
@@ -6,12 +6,12 @@ $text-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvet
 /// @type List
 $code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Monaco', monospace !default;
 
-$background-colour: #101214;
+$background-colour: #74b9ff;
 $soft-white: #FAFCF8;
 
 // Education section
-$education-secondary-colour: #FDAB00;
-$education-dark-background: #222;
+$education-light: #FF9F43;
+$education-dark: #2D3436;
 
 
 /// Copy text color
