Fix Lighthouse audit errors

--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -54,7 +54,7 @@ h2 {
   margin-top: 1rem;
 }
 
-.timelineMedia {
+.timelineItemLink {
   margin-right: 0.75rem;
   font-weight: 600;
   padding: 0.4rem 0.5rem;
