--- a/src/styles/Experience.module.css
+++ b/src/styles/Experience.module.css
@@ -4,20 +4,20 @@
   margin-bottom: -1rem;
 }
 
-h2 {
+.SectionTitle {
   margin: 0;
   padding-top: 2rem;
   font-size: 4rem;
 }
 
-.filterControl {
+.FilterControl {
   display: flex;
   justify-content: center;
   margin: 2rem 1rem 0rem;
   font-size: calc(20px + 0.6vw);
 }
 
-.filterButton {
+.FilterButton {
   background: none;
   border: none;
   cursor: pointer;
@@ -30,7 +30,7 @@ h2 {
   justify-content: space-between;
 }
 
-.filterButton::after {
+.FilterButton::after {
   content: attr(data-text);
   content: attr(data-text)/"";
   height: 0;
@@ -44,18 +44,18 @@ h2 {
   font-weight: 700;
 }
 
-.filterControl button:hover, .filterControl button:focus, .filterControl .active {
+.FilterControl button:hover, .FilterControl button:focus, .FilterControl .active {
   text-decoration: underline;
   outline: none;
   font-weight: 700;
 }
 
-.linksContainer {
+.LinksContainer {
   display: flex;
   margin-top: 1rem;
 }
 
-.timelineItemLink {
+.TimelineItemLink {
   margin-right: 0.75rem;
   font-weight: 600;
   padding: 0.4rem 0.5rem;
@@ -63,18 +63,18 @@ h2 {
 }
 
 @media only screen and (max-device-width : 500px) {
-  .filterControl {
+  .FilterControl {
     flex-wrap: wrap;
     justify-content: space-around;
   }
 
-  .filterControl button {
+  .FilterControl button {
     margin: 0;
   }
 }
 
 @media speech {
-  filterButton::after {
+  .FilterButton::after {
     display: none;
   }
 }
