--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #ECEFF4;
-  background-color: #2E3440;
+  color: #eceff4;
+  background-color: #2e3440;
   height: 25vh;
   padding: 1rem 1rem 2rem;
 }
