--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,6 +1,7 @@
 #Header {
   display: flex;
   justify-content: center;
+  align-items: center;
   color: #eceff4;
   background-color: #2e3440;
   font-size: calc(10px + 2vmin);
@@ -28,12 +29,12 @@
 }
 
 .ImageContainer {
-  padding-right: 6rem;
+  padding-right: 7rem;
 }
 
 .Image {
-  height: 25vh;
-  width: 25vh;
+  height: 32vh;
+  width: 32vh;
   pointer-events: none;
   border-radius: 50%;
   border: 0.5rem solid #88c0d0;
@@ -44,6 +45,7 @@ hr {
 }
 
 .Summary {
+  text-align: left;
   max-width: 75vmin;
 }
 
@@ -76,22 +78,22 @@ hr {
   #Header {
     min-height: 100vh;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     padding: 0;
   }
 
   .ImageContainer {
-    padding: 8rem 0rem 2rem;
+    padding: 4rem 0rem 3rem;
   }
 
   .Image {
-    height: 60vw;
-    width: 60vw;
+    height: 55vw;
+    width: 55vw;
   }
 
   hr {
     display: unset;
+    position: absolute;
     min-width: 75%;
   }
 }
